Add pre-order visitor to ExploreNode#walkgraph to easily traverse SANY's AST.
[Refactor][TLC]