@@ -6,6 +6,7 @@ import java.util.HashSet;
 import java.util.Hashtable;
 
 import tla2sany.explorer.ExploreNode;
+import tla2sany.explorer.ExplorerVisitor;
 import tla2sany.st.TreeNode;
 import tla2sany.utilities.Strings;
 import tla2sany.xml.SymbolContext;
@@ -184,13 +185,14 @@ public AssumeNode(TreeNode stn, ExprNode expr, ModuleNode mn,
    * Explorer tool.
    */
   @Override
-  public final void walkGraph (Hashtable<Integer, ExploreNode> semNodesTable) {
-    Integer uid = new Integer(myUID);
+  public final void walkGraph (Hashtable<Integer, ExploreNode> semNodesTable, ExplorerVisitor preorderVisitor) {
+    Integer uid = Integer.valueOf(myUID);
 
     if (semNodesTable.get(uid) != null) return;
 
     semNodesTable.put(uid, this);
-    if (assumeExpr != null) {assumeExpr.walkGraph(semNodesTable);} ;
+    preorderVisitor.visit(this);
+    if (assumeExpr != null) {assumeExpr.walkGraph(semNodesTable, preorderVisitor);} ;
   }
 
   /* MR: This is the same as SymbolNode.exportDefinition. Exports the actual theorem content, not only a reference.
