@@ -7,6 +7,7 @@ import java.util.Hashtable;
 import java.util.Iterator;
 
 import tla2sany.explorer.ExploreNode;
+import tla2sany.explorer.ExplorerVisitor;
 import tla2sany.st.TreeNode;
 import tla2sany.utilities.Strings;
 import tla2sany.utilities.Vector;
@@ -238,24 +239,25 @@ implements ExploreNode, LevelConstants {
    }
 
   @Override
-  public final void walkGraph(Hashtable<Integer, ExploreNode> semNodesTable) {
-    Integer uid = new Integer(myUID);
+  public final void walkGraph(Hashtable<Integer, ExploreNode> semNodesTable, ExplorerVisitor preorderVisitor) {
+    Integer uid = Integer.valueOf(myUID);
 
     if (semNodesTable.get(uid) != null) return;
 
     semNodesTable.put(uid, this);
+    preorderVisitor.visit(this);
 
     /***********************************************************************
     * Can now walk LET nodes from context, don't need to use opDefs        *
     * (which is incomplete).                                               *
     ***********************************************************************/
-    if (context != null){context.walkGraph(semNodesTable);} ;
+    if (context != null){context.walkGraph(semNodesTable, preorderVisitor);} ;
 //    if (opDefs != null) {
 //      for (int i = 0; i < opDefs.length; i++) {
 //        if (opDefs[i] != null) opDefs[i].walkGraph(semNodesTable);
 //      }
 //    }
-    if (body != null) body.walkGraph(semNodesTable);
+    if (body != null) body.walkGraph(semNodesTable, preorderVisitor);
   }
 
   @Override
