@@ -39,6 +39,7 @@ import org.w3c.dom.Document;
 import org.w3c.dom.Element;
 
 import tla2sany.explorer.ExploreNode;
+import tla2sany.explorer.ExplorerVisitor;
 import tla2sany.parser.SyntaxTreeNode;
 import tla2sany.st.Location;
 import tla2sany.st.TreeNode;
@@ -1225,17 +1226,18 @@ public class OpDefNode extends OpDefOrDeclNode
    * the Explorer tool.
    */
   @Override
-  public final void walkGraph(Hashtable<Integer, ExploreNode> semNodesTable) {
-    Integer uid = new Integer(myUID);
+  public final void walkGraph(Hashtable<Integer, ExploreNode> semNodesTable, ExplorerVisitor preorderVisitor) {
+    Integer uid = Integer.valueOf(myUID);
     if (semNodesTable.get(uid) != null) return;
     semNodesTable.put(uid, this);
+    preorderVisitor.visit(this);
     if (params != null && params.length > 0) {
       for (int i = 0; i < params.length; i++) {
-        if (params[i] != null) params[i].walkGraph(semNodesTable);
+        if (params[i] != null) params[i].walkGraph(semNodesTable, preorderVisitor);
       }
     }
-    if (body != null) body.walkGraph(semNodesTable);
-    if (stepNode != null) stepNode.walkGraph(semNodesTable);
+    if (body != null) body.walkGraph(semNodesTable, preorderVisitor);
+    if (stepNode != null) stepNode.walkGraph(semNodesTable, preorderVisitor);
   }
 
 	@Override
