@@ -16,6 +16,7 @@ package tla2sany.semantic;
 import java.util.Hashtable;
 
 import tla2sany.explorer.ExploreNode;
+import tla2sany.explorer.ExplorerVisitor;
 import tla2sany.st.TreeNode;
 import tla2sany.utilities.Strings;
 import tla2sany.xml.SymbolContext;
@@ -373,13 +374,14 @@ public class TheoremNode extends LevelNode {
   }
 
   @Override
-  public final void walkGraph(Hashtable<Integer, ExploreNode> semNodesTable) {
-    Integer uid = new Integer(myUID);
+  public final void walkGraph(Hashtable<Integer, ExploreNode> semNodesTable, ExplorerVisitor preorderVisitor) {
+    Integer uid = Integer.valueOf(myUID);
     if (semNodesTable.get(uid) != null) return;
     semNodesTable.put(uid, this);
+    preorderVisitor.visit(this);
     if (theoremExprOrAssumeProve != null)
-      {theoremExprOrAssumeProve.walkGraph(semNodesTable);} ;
-    if (proof != null) {proof.walkGraph(semNodesTable);} ;
+      {theoremExprOrAssumeProve.walkGraph(semNodesTable, preorderVisitor);} ;
+    if (proof != null) {proof.walkGraph(semNodesTable, preorderVisitor);} ;
   }
 
   /* MR: this does not do anything
