@@ -28,6 +28,7 @@ import java.util.Hashtable;
 import java.util.Iterator;
 
 import tla2sany.explorer.ExploreNode;
+import tla2sany.explorer.ExplorerVisitor;
 import tla2sany.st.TreeNode;
 import tla2sany.utilities.Strings;
 import tla2sany.utilities.Vector;
@@ -581,11 +582,12 @@ public class ThmOrAssumpDefNode extends SymbolNode
   }
 
   @Override
-  public final void walkGraph(Hashtable<Integer, ExploreNode> semNodesTable) {
-    Integer uid = new Integer(myUID);
+  public final void walkGraph(Hashtable<Integer, ExploreNode> semNodesTable, ExplorerVisitor preorderVisitor) {
+    Integer uid = Integer.valueOf(myUID);
     if (semNodesTable.get(uid) != null) return;
     semNodesTable.put(uid, this);
-    if(this.body != null) {this.body.walkGraph(semNodesTable) ;} ;
+    preorderVisitor.visit(this);
+    if(this.body != null) {this.body.walkGraph(semNodesTable, preorderVisitor) ;} ;
    }
 
   @Override
